force-app/main/default/objects/Payment_Term_Line_Item__c/Payment_Term_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Payment Term Line Item</label>
    <nameField>
        <displayFormat>PTL-{000000}</displayFormat>
        <label>Payment Term Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Term Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>