force-app/main/default/objects/Payment_Term_Line_Item__c/fields/Duration_Units__c.field-meta.xml
<CustomField>
    <fullName>Duration_Units__c</fullName>
    <inlineHelpText>Indicates the duration in units between this and other payment term lines</inlineHelpText>
    <label>Duration Units</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>