force-app/main/default/objects/Payment_Term_Line_Item__c/fields/Invoice_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Standard Language that will be defaulted to the Billing Line item description</inlineHelpText>
    <label>Invoice Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>