force-app/main/default/objects/Payment_Term_Line_Item__c/fields/Offset_Measure__c.field-meta.xml
<CustomField>
    <fullName>Offset_Measure__c</fullName>
    <label>Offset Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>