force-app/main/default/objects/Payment_Term_Line_Item__c/fields/Offset_Units__c.field-meta.xml
<CustomField>
    <fullName>Offset_Units__c</fullName>
    <label>Offset Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>