force-app/main/default/objects/Payment_Term_Line_Item__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <referenceTo>Payment_Terms__c</referenceTo>
    <relationshipLabel>Payment Term Line Items</relationshipLabel>
    <relationshipName>Payment_Term_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>