force-app/main/default/objects/Payment_Term_Line_Item__c/fields/Percent_of_Total__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Total__c</fullName>
    <label>Percent of Total</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>